# face

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/hxrainbow/faceapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hxrainbow/faceapplication/: BaseApplication.java  CameraParamUtil.java  FaceCameraView.java  MainActivity.java  Util.java
app/src/main/res/layout/: activity_main.xml  face_camera_view.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/hxrainbow/faceapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
hxface/: CMakeLists.txt  build.gradle
hxface/src/androidTest/java/com/hxrainbow/hxface/: ExampleInstrumentedTest.java
hxface/src/main/: AndroidManifest.xml
hxface/src/main/cpp/: tracking-lib.cpp
hxface/src/main/java/com/hxrainbow/hxface/: Face.java  FaceTrack.java  FaceTracking.java  Utils.java
hxface/src/main/res/values/: strings.xml
hxface/src/test/java/com/hxrainbow/hxface/: ExampleUnitTest.java
hxfacedetect/: CMakeLists.txt  build.gradle
hxfacedetect/src/androidTest/java/com/hxrainbow/facedetect/: ExampleInstrumentedTest.java
hxfacedetect/src/main/: AndroidManifest.xml
hxfacedetect/src/main/cpp/: UltraFace.cpp  UltraFace.hpp  Ultra_jni.cpp  net.cpp  net.h
hxfacedetect/src/main/java/com/hxrainbow/facedetect/: FaceDetectUtil.java  FaceSDKNative.java
hxfacedetect/src/test/java/com/hxrainbow/facedetect/: ExampleUnitTest.java
